<resources>
    <string name="app_name">Hiker Plus</string>
    <string name="button_register">Register</string>
    <string name="button_logIn">Log In</string>
    <string name="email">Email</string>
    <string name="register_password">PWD(6 or more)</string>
    <string name="login_password">Password</string>
    <string name="userName">Username</string>
    <string name="bottom_bar_record">Record</string>
    <string name="bottom_bar_post">Post</string>
    <string name="bottom_bar_chat">Chat</string>
    <string name="bottom_bar_setting">Setting</string>
    <string name="change_pic">Change Picture</string>
    <string name="change_status">Change Status</string>
    <string name="profile_default_status">Say Something...</string>
    <string name="display_name">Display Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="myStatus">My Status</string>
    <string name="statusHint">Enter your status...</string>
    <string name="updateStatus">Update Status</string>
    <string name="startHiking">+</string>
    <string name="startHiking1">Start</string>
    <string name="defaultDate">2017/11/27</string>
    <string name="defaultDestination">At Mountain.Rainer</string>
    <string name="at">At </string>
    <string name="title_activity_test_map">Map</string>
    <string name="default_distance">0.00 KM</string>
    <string name="default_step">0</string>
    <string name="default_time">00:00:00</string>
    <string name="steps">STEPS</string>
    <string name="time">TIME</string>
    <string name="start_button">START</string>
    <string name="stop_button">STOP</string>
    <string name="pause_button">PAUSE</string>
    <string name="service_not_available">No location data provided</string>
    <string name="invalid_lat_lng_used">Invalid latitude or longitude used </string>
    <string name="no_geocoder">No geocoder available</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="address_found">Address founded</string>
</resources>
