<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:background="@drawable/linear_layout_shape_3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/review_distance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_gravity="bottom"
            android:layout_weight="3"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/default_distance"
            android:textSize="56sp"
            android:textStyle="bold"
            android:textColor="@color/colorButtonText"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="5"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/reviewUserProfile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/profile_img1"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/review_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/display_name"
                android:textColor="@color/colorPostBackground5"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/review_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:fontFamily="casual"
        android:text="@string/defaultDate"
        android:textColor="@color/colorPostBackground5"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/review_destination"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:text="At 5526A Roosevelt Way Northeast, WA 98105, USA"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/review_timeSpan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/default_time"
                android:textAlignment="center"
                android:textColor="@color/colorPostBackground5"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/time"
                android:textAlignment="center"
                android:textColor="@color/colorButtonText"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/review_stepNum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="@string/default_step"
                android:textAlignment="center"
                android:textColor="@color/colorPostBackground5"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/steps"
                android:textAlignment="center"
                android:textColor="@color/colorButtonText"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>