<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorButtonText"
    tools:context="hangxu.finalproject.cs5520.hikerplus.TrackHikingActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="310dp"
        android:layout_marginRight="3dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="3dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="3dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="240dp"
        android:background="@drawable/linear_layout_shape_2"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/map"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/hiking_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/default_distance"
            android:textSize="40sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/step_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="60dp"
                    android:fontFamily="casual"
                    android:text="@string/default_step"
                    android:textColor="@color/colorButtonText"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/step_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:fontFamily="casual"
                    android:textColor="@color/colorButtonText"
                    android:text="@string/steps"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_span"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="130dp"
                    android:fontFamily="casual"
                    android:text="@string/default_time"
                    android:textColor="@color/colorButtonText"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130dp"
                    android:fontFamily="casual"
                    android:textColor="@color/colorButtonText"
                    android:text="@string/time"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/start_track_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginLeft="79dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/bt_shape_start"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/start_button"
                android:fontFamily="casual"
                android:textColor="@color/colorForMatching"
                android:textStyle="bold" />

            <Button
                android:id="@+id/stop_track_button"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="22dp"
                android:background="@drawable/bt_shape_stop"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="@string/stop_button"
                android:fontFamily="casual"
                android:textColor="@color/colorCursor2"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
