<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPostBackground5"
    tools:context=".StatusActivity">

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.5"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:background="@drawable/linear_layout_shape"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingEnd="30dp"
                android:paddingStart="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPostBackground5"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/myStatus"/>
                
                <EditText
                    android:id="@+id/updateStatusEt"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="70dp"
                    android:textColor="@color/colorCursor2"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:inputType="textPersonName"
                    android:hint="@string/statusHint"
                    android:textColorHint="@color/colorForMatching1"
                    android:ems="10"
                    android:textSize="15sp"
                    android:backgroundTint="@color/colorForMatching1"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/updateStatusButton"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="80dp"
                    android:text="@string/updateStatus"
                    android:textColor="@color/colorPostBackground5"
                    android:background="@drawable/bt_shap_2"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:layout_width="160dp"
                    android:layout_height="45dp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>